--- a/style.css
+++ b/style.css
@@ -14893,9 +14893,11 @@ margin-bottom: 0vh;
     padding-right: 0;
     display: block;
   }
-
+  .home-container-width-large {
+    padding-top: 4em;
+    padding-bottom: 4em;
+  }
   .accordion-title-container {
-    width: auto;
     justify-content: space-between;
     margin-left: 0;
     padding-left: 0;
@@ -14917,7 +14919,17 @@ margin-bottom: 0vh;
     display: none;
     right: -46%;
   }
-
+  .section-home-about{
+    height:66vh;
+  }
+  .middle_section_wrapper{
+    height:66vh;
+  }
+  .container-left-colum-about_section {
+    position:relative;
+    padding-top: 10em;
+  }
+  }
   .home-process-container-large {
     height: auto;
     display: flex;
@@ -16433,54 +16445,8 @@ height:20%;
   border:0;
 }
 
-#canvas3d {
-  width: 100%;
-  height: 100%;
-}
-.canvas3d {
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-@media screen and (max-width: 479px){
-  .title-medium-gold, .title-medium-serv {
-    padding-bottom: 0;
-  
-  }
-
-  .heading-21 {
-    font-size: 5rem;
-  }
-.small-text-muted-90 {
-  text-align: center;
-}
-
-.card_faq._2 {
-  padding: 2rem;
-  top: 11em;
-  height: 400px;
-  width: 90%;
-  margin-bottom: 20.6em;
-
-    padding: 1rem;
-  
-}
-.grid_faq {
-  padding-left:0;
-  padding-right:0;
-}
 
 
-.fn-footer-first {
-  
-  justify-content: center;
-  align-items: center;
-}
-.pageLoader{
-  height: 50vh;
-}
-}
 @media screen and (max-width: 991px){
   .pageLoader{
     height: 80vh;
@@ -16502,16 +16468,6 @@ height:20%;
   margin-bottom:1em;
 }
 
-#canvas3d {
-  width: 100%;
-  height: 40%;
-}
-.canvas3d {
-  width: 150%;
-height: 100%;
-  top: 25px;
-
-}
 .center {
   position: absolute;
   align-items: center;
@@ -16535,37 +16491,7 @@ height: 100%;
           animation: move 5s infinite alternate;
   transition: 1s cubic-bezier(0.07, 2, 0.16, 1);
 }
-#canvas3d {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  margin: auto;
 
-}
-.canvas3d {
-  width: 150%;
-  height: 100%;
-  position: absolute;
-  margin: auto;
-  -webkit-animation: appear 5s;
-  animation: appear 10s;
-  padding-right: 25%;
-bottom: 25%;
-
-}
-@keyframes appear {
-  from {
-   
-    opacity:0;
-  }
-
-  to {
-  
-    opacity:1;
-  }
-
-
-}
 @-webkit-keyframes move {
   from {
    
@@ -16648,11 +16574,17 @@ height:10%;
 .timeline-component {
   margin: 0px 20px 20px 20px;
 }
-
+}
 @media screen and (min-width: 768px) {
   .timeline {
     display: grid;
     grid-template-columns: 1fr 3px 1fr;
+  }
+  .menuLeft{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left:0em;
   }
   .timeline-middle.is_1 {
     position: relative;
@@ -16704,6 +16636,108 @@ height:10%;
     background-color:#E63900;
   }
 }
+@media screen and (max-width: 479px){
+  .menu_container_hero{
+    position: absolute;
+    left: 0;
+    right: auto;
+    z-index: 1;
+  }
+  .image-25 {
+    margin-left:0em;
+  }
+  .title-medium-gold, .title-medium-serv {
+    padding-bottom: 0;
+    padding-top: 4rem;
+  }
+
+  .timeline-circle.is_1 {
+    display:none;
+  }
+  .timeline-circle.is_2 {
+    display:none;
+  }
+  .timeline-circle.is_3 {
+    display:none;
+  }
+  .timeline-circle.is_4 {
+    display:none;
+  }
+  .heading-21 {
+    font-size: 5rem;
+  }
+.small-text-muted-90 {
+  text-align: center;
+}
+.leftcol_faq {
+  margin-bottom: 0em;
+  position: relative;
+}
+.card_faq._2 {
+  padding: 2rem;
+  top: 0em;
+  height: 400px;
+
+}
+.card_faq._1 {
+  padding: 2rem;
+  top: 0em;
+  height: 400px;
+ 
+  
+  
+}
+.design-section{
+  padding:0;
+}
+.section-home-process {
+ 
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+ }
+.home-process-container-large{
+  padding-top:1em;
+}
+.home-faq-wrapper{
+  padding-top:0rem;
+}
+.white{
+  padding-top:1rem;
+}
+.grid_faq {
+  padding-left:0;
+  padding-right:0;
+}
+.card_faq._1,.card_faq._2, .card_faq._5 {
+  margin-bottom: 3em;
+  position: relative;
+  padding: 1rem;
+  width: 90%;
+  height:auto;
+  top:0;
+  }
+  .fn-footer-first{
+  position:relative;}
+  .inner_container_faq{
+    padding-top:0rem;
+  }
+  .sample-slider{
+    width:70%;
+}
+.sample-slider img{
+    width: 100%;
+}
+.fn-footer-first {
+  
+  justify-content: center;
+  align-items: center;
+}
+.pageLoader{
+  height: 50vh;
+}
+}
+.icon_social {
+  background-color: transparent;
 }
 #load-more{
   background-color:#000;
