--- a/style.css
+++ b/style.css
@@ -6973,9 +6973,10 @@ align-items: center;
   padding-top: 0;
   padding-left: 0;
   padding-right: 0;
-  display: block;
+  display: flex;
   position: relative;
   top: 0;
+  flex-direction:row;
 }
 
 .home-portfolio-row.not_sticky {
