--- a/style.css
+++ b/style.css
@@ -2237,7 +2237,7 @@ align-content: center;
 .body {
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  background-color: #0f0f0f;
+ background-color: #ededf3;
   flex-direction: column;
   grid-template-rows: auto auto 1fr auto;
   grid-template-columns: 1fr 1fr 1fr .25fr;
