--- a/style.css
+++ b/style.css
@@ -2057,7 +2057,7 @@ textarea.w-input, textarea.w-select {
 }
 
 body {
-  color: #333;
+  background-color: #ededf3;
   font-family: "Lato", sans-serif;
   font-size: 16px;
   line-height: 18.58px;
