--- a/style.css
+++ b/style.css
@@ -8417,7 +8417,9 @@ align-items: center;
   width:2.5rem;
 }
 .btnContact {
-  z-index: 100;
+  z-index: 99999999;
+  align-items: center;
+  justify-content: center;
 width:4rem;
 height:4rem;
 border-radius:100px;
@@ -8432,8 +8434,6 @@ border-radius:100px;
   display:none;
   background-color: #C29953;
 border-radius: 100px;
-  align-items: center;
-justify-content: center;
 }
 
 .close-container{
