--- a/style.css
+++ b/style.css
@@ -8761,13 +8761,15 @@ top: 25%;
   margin-left: 2rem;
   margin-right: 2rem;
 }
-
 .bold-text-8 {
-  color: #936c34;
-  font-size: 1.5rem;
-  line-height: 150%;
-  font-weight:400;
-}
+  color:#f2e3c6;
+   font-size: 1.5rem;
+   line-height: 150%;
+   font-weight:400;
+ }
+ .bold-text-Tuto{
+   color: #b58b4f;
+ }
 
 .bold-text-9 {
   color: #e2d2bc;
@@ -12735,7 +12737,7 @@ position: relative;
     padding-left: 0;
     font-size: 40px;
   }
-  .heading-32,.bold-text-8{
+  .heading-32,.bold-text-8,.bold-text-Tuto{
     
       font-size:1.75rem;
     
@@ -16815,4 +16817,5 @@ text-align:center;
     transform: rotate(180deg);
     transition: .3s;
 }
+
 @font-face{font-family:Lato;font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wWw.ttf) format('truetype')}@font-face{font-family:'Playfair Display';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/playfairdisplay/v30/nuFvD-vYSZviVYUb_rj3ij__anPXJzDwcbmjWBN2PKdFvXDXbtY.ttf) format('truetype')}
