--- a/style.css
+++ b/style.css
@@ -8762,7 +8762,7 @@ top: 25%;
   margin-right: 2rem;
 }
 .bold-text-8 {
-  color:#f2e3c6;
+  color:#f4dfc1;
    font-size: 1.5rem;
    line-height: 150%;
    font-weight:400;
