--- a/style.css
+++ b/style.css
@@ -16762,3 +16762,11 @@ text-align:center;
     transform: rotate(180deg);
     transition: .3s;
 }
+.hide {
+  display: none;
+}
+
+.certified:hover + .hide {
+  display: block;
+ 
+}
