--- a/style.css
+++ b/style.css
@@ -2881,7 +2881,8 @@ align-content: center;
   top: auto;
   bottom: 0%;
   left: auto;
-  right: 19%;
+  right: 36%;
+border-radius: 20px;
 }
 
 .home-process-container-large {
@@ -15191,12 +15192,6 @@ margin-bottom: 0vh;
    }
    h4{
     font-size:1.75rem;
-   }
-   .img_accordion{
-    width:35vw;
-    position: absolute;
-    top: 50%;
-    right:0; 
    }
 
   .footer-column-container._2 {
