--- a/style.css
+++ b/style.css
@@ -9056,6 +9056,9 @@ margin-left:24rem;
   font-size: 2rem
 }
 
+.footer-splitting{
+  font-family:"Lato"
+}
 .ArrowAccordion {
   max-width: 20%;
   vertical-align: middle;
